--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital@1&family=Lato:ital,wght@0,400;0,700;0,900;1,700&family=Space+Mono:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital@1&family=Kanit:ital,wght@0,400;0,700;0,900;1,700&family=Lato:ital,wght@0,400;0,700;0,900;1,700&family=Space+Mono:wght@700&display=swap");
 // fonts
-$lato: "Lato", sans-serif;
+$lato: "Kanit", sans-serif;
 
 //colors
 $light: #dbe6ed;
 $light2: #efe9e6;
 $lightLine: #dbefed;
 
-$dark: #0f1515;
+$dark: #022c43;
 $dark2: #08332f;
 $darkLine: #055449;
 
 $aqua: #229b91;
-$white: #fff;
+$white: #ffd700;
 $black: #030502;
 
 //border radius
@@ -32,37 +32,38 @@ $headerHeight: 90px;
 
 // box shadow - layered on
 $boxShadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
-0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.05);
+  0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
+  0 16px 16px rgba(0, 0, 0, 0.05);
 
-@mixin breakpoint($points){
-    @if $points == xl {
-        //1120px - for mobile
-        @media(min-width: 70em){
-            @content;
-        }
-    } @else if $points == lg {
-        //1024px 
-        @media(min-width: 64em){
-            @content;
-        }
-    }@else if $points == md {
-        //768px
-        @media(min-width: 48em){
-            @content;
-        }
-    }@else if $points ==  md-only{
-        //767px
-        @media(max-width: 767px){
-            @content;
-        }
-    }@else if $points == sm {
-        //600px
-        @media(min-width: 37.5em){
-            @content;
-        }
-    }@else if $points == sm-only {
-        @media(max-width: 599px){
-            @content;
-        }
+@mixin breakpoint($points) {
+  @if $points == xl {
+    //1120px - for mobile
+    @media (min-width: 70em) {
+      @content;
     }
+  } @else if $points == lg {
+    //1024px
+    @media (min-width: 64em) {
+      @content;
+    }
+  } @else if $points == md {
+    //768px
+    @media (min-width: 48em) {
+      @content;
+    }
+  } @else if $points == md-only {
+    //767px
+    @media (max-width: 767px) {
+      @content;
+    }
+  } @else if $points == sm {
+    //600px
+    @media (min-width: 37.5em) {
+      @content;
+    }
+  } @else if $points == sm-only {
+    @media (max-width: 599px) {
+      @content;
+    }
+  }
 }
