--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -111,7 +111,7 @@
           border-bottom-right-radius: $borderRadius;
 
           svg {
-            color: $aqua;
+            color: $white;
             font-size: 1.1rem;
           }
 
