--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -25,6 +25,9 @@
       font-size: 1.6rem;
       letter-spacing: $letterSpacing;
       margin-bottom: $spacing-md;
+      @include breakpoint(md) {
+        font-size: 2.6rem;
+      }
     }
     span {
       color: $white;
@@ -38,6 +41,7 @@
       align-items: center;
 
       button {
+        margin-top: $spacing-md;
         width: 100%;
       }
 
@@ -57,53 +61,34 @@
         border-radius: $borderRadius;
 
         @include breakpoint(md) {
-          width: 300px;
+          width: 700px;
           margin-bottom: 0;
           margin-right: $spacing-sm;
+          margin-bottom: $spacing-sm;
         }
 
         &:focus {
           outline: 0;
         }
       }
-    }
-  }
 
-  &__content {
-    width: 100%;
-    min-height: 20vh;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: $spacing-md;
-    text-align: center;
-    margin-bottom: $spacing-xl;
-
-    @include breakpoint(sm) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-    @include breakpoint(md) {
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    &__col {
-      height: 100%;
-
-      &__headline {
-        color: $white;
-        font-size: 1.6rem;
-        margin-bottom: $spacing-md;
+      .textarea {
         letter-spacing: $letterSpacing;
-      }
+        font-family: inherit;
+        width: fit-content;
+        font-size: 1.1rem;
+        margin-bottom: $spacing-sm;
+        padding: $spacing-sm $spacing-md;
+        border-radius: $borderRadius;
 
-      &__links {
-        li {
-          margin-bottom: $spacing-sm;
-          a {
-            letter-spacing: $letterSpacing;
-            width: 100%;
-            color: $white;
-            text-decoration: none;
-          }
+        @include breakpoint(md) {
+          width: 700px;
+          margin-bottom: 0;
+          margin-right: $spacing-sm;
+        }
+
+        &:focus {
+          outline: 0;
         }
       }
     }
@@ -119,7 +104,7 @@
       flex-direction: row;
     }
     a,
-    &__year,
+    // &__year,
     ul {
       &:not(:first-child) {
         margin-bottom: $spacing-sm;
@@ -130,12 +115,6 @@
       @include breakpoint(md) {
         flex: 1;
       }
-    }
-    &__year {
-      display: flex;
-      justify-content: center;
-      letter-spacing: $letterSpacing;
-      font-size: 0.9rem;
     }
     &__socials {
       display: flex;
@@ -149,7 +128,7 @@
         }
         a {
           font-size: 1.6rem;
-          color: white;
+          color: $white;
           text-decoration: none;
         }
       }
