--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -13,7 +13,7 @@
   width: 1000px;
   margin: 0 1.5rem;
 
-  &__newsletter {
+  &__title {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,7 +104,6 @@
       flex-direction: row;
     }
     a,
-    // &__year,
     ul {
       &:not(:first-child) {
         margin-bottom: $spacing-sm;
