--- a/src/pages/AboutMe/AboutMe.module.scss
+++ b/src/pages/AboutMe/AboutMe.module.scss
@@ -1,5 +1,21 @@
 @import "./../../styles/variables.scss";
 
+.container {
+  position: relative;
+  height: 100vh;
+  min-height: 800px;
+  margin: 0 auto;
+}
+
+.video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .aboutme {
   position: absolute;
   top: 0;
