Project Page Layout

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -29,6 +29,7 @@ $spacing-xl: 64px;
 
 //heights
 $headerHeight: 90px;
+$headerHeight2: 120px;
 
 // box shadow - layered on
 $boxShadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
