--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -8,6 +8,10 @@
   overflow-y: scroll;
 }
 
+.container::-webkit-scrollbar {
+  display: none;
+}
+
 .video {
   position: fixed;
   top: 0;
@@ -49,7 +53,7 @@
     backdrop-filter: blur(2px);
     padding: $spacing-lg;
     border-radius: $borderRadius;
-    text-align: left;
+    text-align: center;
     width: 1000px;
     display: flex;
     flex-direction: column;
@@ -85,6 +89,20 @@
       }
       @include breakpoint(sm) {
         font-size: 1.6rem;
+      }
+    }
+
+    &__codes {
+      font-size: 0.8rem;
+      font-weight: 400;
+      color: $white;
+      font-style: italic;
+      margin-bottom: $spacing-md;
+      @include breakpoint(md) {
+        font-size: 1rem;
+      }
+      @include breakpoint(sm) {
+        font-size: 1.2rem;
       }
     }
 
@@ -144,9 +162,37 @@
         }
       }
 
-      &__icon {
-        margin-right: $spacing-sm;
-        top: $spacing-md;
+      &__item {
+        cursor: pointer;
+        border: none;
+        outline: none;
+        border-radius: $borderRadius;
+        padding: $spacing-sm $spacing-lg;
+        font-family: inherit;
+        font-weight: 700;
+        letter-spacing: $letterSpacing;
+        font-size: 1.1rem;
+        background: $light;
+        color: $dark;
+        border: 1px solid $dark;
+        transition: all 0.3s ease;
+        text-decoration: none;
+        text-transform: none;
+        width: 100%;
+
+        &:hover {
+          background: rgba($light, 0.8);
+        }
+
+        @include breakpoint(md) {
+          white-space: nowrap;
+          width: 100%;
+        }
+
+        &__icon {
+          align-items: center;
+          margin-right: $spacing-sm;
+        }
       }
     }
   }
