--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,20 @@
-@import './reset.scss';
-@import './variables.scss';
+@import "./reset.scss";
+@import "./variables.scss";
 
-#root{
-    height: 100%;
+#root {
+  height: 100%;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-body{
-    width: 100%;
-    font-family: $lato;
+body {
+  width: 100%;
+  font-family: $lato;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
