--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -26,7 +26,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 200%;
+  height: 900%;
   background: rgba($dark, 0.3);
   padding-top: $headerHeight2;
   display: flex;
@@ -127,6 +127,9 @@
       margin-bottom: $spacing-lg;
       line-height: 20px;
       padding-top: $spacing-md;
+      margin: auto;
+      margin-bottom: $spacing-sm;
+
       @include breakpoint(sm) {
         font-size: 1.1rem;
         width: 80%;
