--- a/src/pages/AboutMe/AboutMe.module.scss
+++ b/src/pages/AboutMe/AboutMe.module.scss
@@ -2,9 +2,14 @@
 
 .container {
   position: relative;
-  height: 100vh;
+  height: 110vh;
   min-height: 800px;
   margin: 0 auto;
+  overflow-y: scroll;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
 
 .video {
@@ -14,6 +19,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin-bottom: $spacing-md;
 }
 
 .aboutme {
@@ -21,12 +27,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 130%;
   background: rgba($dark, 0.3);
   padding-top: $headerHeight;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: $spacing-md;
 
   &__content {
     margin: 0 1.5rem;
@@ -82,6 +89,24 @@
       line-height: 20px;
       @include breakpoint(sm) {
         font-size: 1.1rem;
+        width: 80%;
+      }
+      @include breakpoint(md) {
+        width: 60%;
+        margin: 0 auto $spacing-lg auto;
+      }
+    }
+
+    &__quote {
+      text-transform: capitalize;
+      color: $light;
+      width: 100%;
+      font-size: 1.5rem;
+      margin-bottom: $spacing-lg;
+      line-height: 20px;
+      color: $white;
+      @include breakpoint(sm) {
+        font-size: 1.5rem;
         width: 80%;
       }
       @include breakpoint(md) {
