--- a/src/pages/AboutMe/AboutMe.module.scss
+++ b/src/pages/AboutMe/AboutMe.module.scss
@@ -27,10 +27,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 140%;
   background: rgba($dark, 0.3);
   padding-top: $headerHeight;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 
